[package]
name = "csvtest"
version = "0.1.0"
edition = "2021"
authors = ["me"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
csv = "1.1.6"
env_logger = "0.9.0"
log = "0.4.14"
rand = "0.8.5"
serde = {version = "1.0.136", features = ["derive"] }
